<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Imagen_veificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_verificacion"
                android:layout_marginTop="150sp"
                />


            <TextView
                android:id="@+id/id_text_verificado_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80sp"
                android:layout_marginEnd="100sp"
                android:text="@string/verificado_paypal"
                android:layout_marginTop="30sp"
                android:gravity="center_horizontal"
                android:textColor="@color/Titulos"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="30sp"
                android:layout_marginRight="30sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_text_verificado_paypal_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verificado_paypal_message"
                    android:layout_marginTop="10sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/id_btnA"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginStart="80sp"
                    android:layout_marginEnd="80sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="190sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/verificado_paypal_btn"
                    android:textStyle="bold"
                    app:backgroundTint="@color/Titulos"
                    app:cornerRadius="20sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>